cmd/shared/libgogit.h

extern void GitRepositoryFree(long long repoHandle);
extern char* GitSubmoduleInit(long long subHandle);
extern char* GitSubmoduleUpdate(long long subHandle, long long optsHandle);
extern char* GitSubmoduleRepository(long long subHandle, long long* handleOut);
extern char* GitSubmoduleConfigName(long long subHandle, char** nameOut);
extern void GitSubmoduleFree(long long subHandle);
extern char* GitWorktreeStatus(long long wtHandle, char** jsonOut);
extern char* GitWorktreeAdd(long long wtHandle, char* path, char** hashOut);
extern char* GitWorktreeAddWithOptions(long long wtHandle, long long optsHandle);
extern char* GitWorktreeAddGlob(long long wtHandle, char* pattern);
extern char* GitWorktreeCommit(long long wtHandle, char* msg, long long optsHandle, char** hashOut);
extern char* GitWorktreeCheckout(long long wtHandle, long long optsHandle);
extern char* GitWorktreePull(long long wtHandle, long long optsHandle);
extern char* GitWorktreeReset(long long wtHandle, long long optsHandle);
extern char* GitWorktreeRestore(long long wtHandle, long long optsHandle);
extern char* GitWorktreeClean(long long wtHandle, long long optsHandle);
extern char* GitWorktreeMove(long long wtHandle, char* fromPath, char* toPath, char** hashOut);
extern char* GitWorktreeSubmodule(long long wtHandle, char* name, long long* handleOut);
extern char* GitWorktreeSubmodules(long long wtHandle, char** jsonOut);
extern void GitWorktreeFree(long long wtHandle);