dotnet/GoGitDotNet/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryStoreTree(
        long rHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string entriesJson,
        out IntPtr hashOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositoryStoreCommit(
        long rHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string treeHash,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string parentsJson,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string authorName,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string authorEmail,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string committerName,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string committerEmail,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string message,
        long timestampUnix,
        out IntPtr hashOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitRepositorySetReference(
        long rHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string refName,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string hash);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitRepositoryFree(long rHandle);

    // Submodule methods

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleInit(
        long sHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleRepository(
        long sHandle, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleUpdate(
        long sHandle, long oHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleUpdateContext(
        long sHandle, long oHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleConfigName(
        long subHandle, out IntPtr nameOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleConfig(
        long subHandle, out IntPtr jsonOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitSubmoduleStatus(
        long subHandle, out IntPtr jsonOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitSubmoduleFree(long sHandle);

    // Worktree methods

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeAdd(
        long wHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string path, out IntPtr strOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeAddGlob(
        long wHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string pattern);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeAddWithOptions(
        long wHandle, long optsHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeCheckout(
        long wHandle, long optsHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeCherryPick(
        long wHandle, long commitOptsHandle, int ortStrategyOption);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeClean(
        long wHandle, long optsHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeCommit(
        long wHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string msg, long optsHandle, out IntPtr strOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeMove(
        long wHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string from, [MarshalAs(UnmanagedType.LPUTF8Str)] string to, out IntPtr strOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreePull(
        long wHandle, long oHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreePullContext(
        long wHandle, long oHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeRemove(
        long wHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string path, out IntPtr strOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeRemoveGlob(
        long wHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string pattern);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeReset(
        long wHandle, long optsHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeRestore(
        long wHandle, long oHandle);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeStatus(
        long wtHandle, out IntPtr jsonOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeSubmodule(
        long wHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string name, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeSubmodules(
        long wtHandle, out IntPtr jsonOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitWorktreeWriteFile(
        long wtHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string dataBase64,
        out IntPtr hashOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitWorktreeFree(long wHandle);

    // Blob methods

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitBlobID(
        long bHandle, out IntPtr strOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitBlobReader(
        long bHandle, out IntPtr dataOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitBlobType(
        long bHandle, out int valOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitBlobGetHash(long bHandle, out IntPtr valOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitBlobGetSize(long bHandle, out long valOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitBlobFree(long bHandle);

    // Commit methods

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitFile(
        long cHandle, [MarshalAs(UnmanagedType.LPUTF8Str)] string path, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitFiles(
        long cHandle, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitID(
        long cHandle, out IntPtr strOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitIsAncestor(
        long cHandle, long otherHandle, out int boolOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitLess(
        long cHandle, long rhsHandle, out int boolOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitMergeBase(
        long cHandle, long otherHandle, out IntPtr jsonOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitNumParents(
        long cHandle, out int valOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitParent(
        long cHandle, int i, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitParents(
        long cHandle, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitPatch(
        long cHandle, long toHandle, out IntPtr patchOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitStats(
        long cHandle, out IntPtr jsonOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitString(
        long cHandle, out IntPtr strOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitTree(
        long cHandle, out long handleOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitType(
        long cHandle, out int valOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitVerify(
        long cHandle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string armoredKeyRing);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitAuthorName(
        long cHandle, out IntPtr nameOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitAuthorEmail(
        long cHandle, out IntPtr emailOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitAuthorWhen(
        long cHandle, out long tsOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitCommitterName(
        long cHandle, out IntPtr nameOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitCommitterEmail(
        long cHandle, out IntPtr emailOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitCommitterWhen(
        long cHandle, out long tsOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitGetHash(long cHandle, out IntPtr valOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitGetMergeTag(long cHandle, out IntPtr valOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitGetSignature(long cHandle, out IntPtr valOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitGetMessage(long cHandle, out IntPtr valOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitGetTreeHash(long cHandle, out IntPtr valOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr GitCommitGetEncoding(long cHandle, out IntPtr valOut);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern void GitCommitFree(long cHandle);

    // File methods
